--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
-		together.setFullYear(2016, 2, 25);
+		together.setFullYear(2016, 1, 25); <!--这里的月份要填写实际月份减1-->
 		together.setHours(22);
 		together.setMinutes(0);
 		together.setSeconds(0);
