--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div id="copyright">
 			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
 			Copyright © 2011 <a href='http://hackerzhou.me'>hackerzhou.me</a> 2009-2011<br />
-			Modified by <a href='https://i-square.github.io/about/'>i_square | 平方君</a> 2017
+			Modified by <a href='https://i-square.github.io'>i_square | 平方君</a> 2017
 		</div>
 	</div>
 	<script type="text/javascript">
